--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "antd": "^5.23.4",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "keycloak-js": "^26.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^9.0.3",
